@startuml
!theme minty
abstract class Human {
    + Human(name:string, age:short)
    + Name : string <<get>>
    + Age : short <<get>>
}
class Student {
    + Student(name:string, age:short)
}
Human <|-- Student
class Teacher {
    + Teacher(name:string, age:short)
}
Human <|-- Teacher
class Lecture {
    + Lecture(name:string, address:string, timeStart:string, timeStop:string, teacher:Teacher)
    + Name : string <<get>>
    + Address : string <<get>>
    + Start : string <<get>>
    + Stop : string <<get>>
    + Students : List<Student> <<get>>
    + HomeroomTeacher: Teacher <<get, set>>
}
Lecture --> Teacher
Lecture --> Student
@enduml
